--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Park21</string>
+    <string name="edit_message">Enter message</string>
+    <string name="button_send">Send</string>
+    <string name="button_maps">Maps</string>
 </resources>
