Commit view parqueaderos y user profile. Related #92, #143, #141, #137, #140

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,8 @@
     <string name="edit_message">Enter message</string>
     <string name="button_send">Send</string>
     <string name="button_maps">Maps</string>
+    <string name="button_edit">Ver mis carros</string>
+    <string name="button_familia">Ver Familia</string>
     <string name="title_activity_settings">Settings</string>
 
     <!-- Preference Titles -->
